# Tuatara

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
app/: README.md  image_changer.py  image_path_finder.py  main.py
app/data/: .gitignore  README.md  dbCalls.py  tablebuilder.py
app/images/: .gitignore  README.md
tests/: test_tuatara.py
tuatara/: app.py  cors_workaround.py  image_changer.py  image_info_finder.py  image_path_finder.py  main.py
turatara.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
