[tool.poetry]
name = "tuatara"
version = "0.1.0"
description = ""
authors = ["Daron Dierkes <daron.dierkes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "^5.4"
flask = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
